Fixed crash when using command line "kexi --dbdriver postgresql" and more

General:
*Fixed crash when using command line "kexi --dbdriver postgresql"
*Clicking "Details" button of the password dialog shows full connection dialog
*Skip the Welcome Wizard if connection data options are set from command line
*Enable editing of user name in the password dialog even if specified by command line

BUG:319432